--- a/templates/home.html
+++ b/templates/home.html
@@ -2,8 +2,12 @@
     <head>
         <title>Headlines</title>
     </head>
-    <body>
         <h1>Headlines</h1>
+        <form>
+            <input type="text" name="publication" placeholder="search"/>
+            <input type="submit" value="Submit"/>
+        </form>
+    <body>
         {% for article in articles %}
             <b><a href="{{article.link}}">{{article.title}}</a></b><br/>
             <i>{{article.published}}</i><br/>
